# bottle_neck

./: .env.example  .gitignore  README.md  pyproject.toml
config/: assets.yaml  risk.yaml  settings.yaml  strategy_candidate_v1.yaml  ticker_news_map.yaml
docs/: trading_system_design.md
scripts/: backtest_model_signals.py  backtest_portfolio_model.py  backtest_portfolio_model_v2.py  build_live_features.py  build_market_features.py  build_model_dataset.py  build_news_features.py  check_trading_dates.py  compare_buy_hold.py  data_quality_report.py  download_gdelt_news.py  download_gdelt_news_monthly.py  download_history.py  generate_candidate_signals.py  get_telegram_chat_id.py  grid_search_portfolio_v2.py  health_check.py  inspect_news.py  inspect_news_monthly.py  inspect_storage.py  paper_portfolio_tracker.py  plan_daily_order_intents.py  run_daily_pipeline.sh  sandbox_executor.py  sandbox_exit_executor.py  sandbox_orders_status.py  sandbox_position_tracker.py  sandbox_reconcile.py  send_sandbox_report.py  send_telegram_report.py  setup_tinvest_sandbox.py  train_baseline_model.py  update_daily_candles.py  walk_forward_backtest.py
src/: settings.py
src/connectors/: gdelt_client.py  tinkoff_client.py
src/data/: storage.py
src/execution/: __init__.py  decision_result.py  order_intent.py  order_planner.py  order_storage.py  reason_codes.py
src/features/: market_features.py  news_features.py
src/risk/: __init__.py  sizing.py
src/tinvest_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
